Angular app.js, services.js, controllers.js, server.js index.html Service AdministracionService.java

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -46,6 +46,8 @@
 <script src="resources/bootstrap-3.3.1/js/bootstrap.min.js"></script>
 <!-- Custom App -->
 <script src="app/angular/controllers.js"></script>
+<script src="app/angular/server.js"></script>
+<script src="app/angular/services.js"></script>
 <script src="app/angular/app.js"></script>
 
 </html>
