ABM Tipos Contacto Funcionando

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,15 +18,9 @@
 			<div id="sidebar-wrapper">
 				<ul class="sidebar-nav">
 					<li class="sidebar-brand"><a href="#">Menu <span class="glyphicon glyphicon-home"></span></a></li>
-					<li><a href="#/administracion">Tipo Administracion</a></li>
-					<li><a href="#/cargos">Cargos</a></li>
-					<li><a href="#/relaciones">Relaciones</a></li>
-					<li><a href="#/formaciones">Formacion</a></li>
-					<li><a href="#/estadoFormacion">Estados (Formacion)</a></li>
-					<li><a href="#/tipoContacto">Tipos Contacto</a></li>
-					<li><a href="#/"></a></li>
-					<li><a href="#/"></a></li>
-					<li><a href="#/"></a></li>
+					<li><a href="#/tiposAdministracion">Tipo Administracion</a></li>
+					<li><a href="#/tiposCargo">Tipos Cargos</a></li>
+					<li><a href="#/tiposContacto">Tipos Contacto</a></li>
 				</ul>
 			</div>
 		</div>
