routes.js NUEVO texto en home.html centrado

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,9 +18,9 @@
 			<div id="sidebar-wrapper">
 				<ul class="sidebar-nav">
 					<li class="sidebar-brand"><a href="#">Menu <span class="glyphicon glyphicon-home"></span></a></li>
-					<li><a href="#/tiposAdministracion">Tipo Administracion</a></li>
-					<li><a href="#/tiposCargo">Tipos Cargos</a></li>
-					<li><a href="#/tiposContacto">Tipos Contacto</a></li>
+					<li><a href="#/tiposAdministracion">Tipos de Administración</a></li>
+					<li><a href="#/tiposCargo">Tipos de Cargos</a></li>
+					<li><a href="#/tiposContacto">Tipos de Contacto</a></li>
 				</ul>
 			</div>
 		</div>
@@ -39,6 +39,7 @@
 <!-- Bootstrap -->
 <script src="resources/bootstrap-3.3.1/js/bootstrap.min.js"></script>
 <!-- Custom App -->
+<script src="app/angular/routes.js"></script>
 <script src="app/angular/controllers.js"></script>
 <script src="app/angular/server.js"></script>
 <script src="app/angular/services.js"></script>
