--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -21,6 +21,7 @@
 					<li><a href="#/tiposAdministracion">Tipos de Administración</a></li>
 					<li><a href="#/tiposCargo">Tipos de Cargos</a></li>
 					<li><a href="#/tiposContacto">Tipos de Contacto</a></li>
+					<li><a href="#/tiposDocumento">Tipos de Documento</a></li>
 				</ul>
 			</div>
 		</div>
@@ -39,10 +40,14 @@
 <!-- Bootstrap -->
 <script src="resources/bootstrap-3.3.1/js/bootstrap.min.js"></script>
 <!-- Custom App -->
-<script src="app/angular/routes.js"></script>
-<script src="app/angular/controllers.js"></script>
+<script src="app/angular/tipoAdministracionCtrl.js"></script>
+<script src="app/angular/tipoCargoCtrl.js"></script>
+<script src="app/angular/tipoContactoCtrl.js"></script>
 <script src="app/angular/server.js"></script>
 <script src="app/angular/services.js"></script>
+<script src="app/angular/routes.js"></script>
+<script src="app/angular/controllers.js"></script>
+
 <script src="app/angular/app.js"></script>
 
 </html>
