- Ctrls, Services, route, service, controllers, REST services, FUNCINANDO para todos los Tipos. - Alert pasado a modal

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -22,6 +22,14 @@
 					<li><a href="#/tiposCargo">Tipos de Cargos</a></li>
 					<li><a href="#/tiposContacto">Tipos de Contacto</a></li>
 					<li><a href="#/tiposDocumento">Tipos de Documento</a></li>
+					<li><a href="#/tiposEstadoContractual">Tipos de Estado Contractual</a></li>
+					<li><a href="#/tiposEstadoFormacion">Tipos de Estado Formacion</a></li>
+					<li><a href="#/tiposFormacion">Tipos de Formacion</a></li>
+					<li><a href="#/tiposMotivo">Tipos de Motivos Baja</a></li>
+					<li><a href="#/tiposPersonal">Tipos de Personal</a></li>
+					<li><a href="#/tiposRelacion">Tipos de Relacion Laboral</a></li>
+					<li><a href="#/tiposSituacion">Tipos de Situacion Actual</a></li>
+					<li><a href="#/tiposSituacionRevista">Tipos de Situacion de Revista</a></li>
 				</ul>
 			</div>
 		</div>
@@ -40,14 +48,37 @@
 <!-- Bootstrap -->
 <script src="resources/bootstrap-3.3.1/js/bootstrap.min.js"></script>
 <!-- Custom App -->
-<script src="app/angular/tipoAdministracionCtrl.js"></script>
-<script src="app/angular/tipoCargoCtrl.js"></script>
-<script src="app/angular/tipoContactoCtrl.js"></script>
-<script src="app/angular/server.js"></script>
-<script src="app/angular/services.js"></script>
-<script src="app/angular/routes.js"></script>
-<script src="app/angular/controllers.js"></script>
-
+<script src="app/angular/routes/routes.js"></script>
+<!-- Services -->
+<script src="app/angular/services/services.js"></script>
+<script src="app/angular/services/server.js"></script>
+<script src="app/angular/services/tipoAdministracionService.js"></script>
+<script src="app/angular/services/tipoCargoService.js"></script>
+<script src="app/angular/services/tipoContactoService.js"></script>
+<script src="app/angular/services/tipoDocumentoService.js"></script>
+<script src="app/angular/services/tipoEstadoContractualService.js"></script>
+<script src="app/angular/services/tipoEstadoFormacionService.js"></script>
+<script src="app/angular/services/tipoFormacionService.js"></script>
+<script src="app/angular/services/tipoMotivoService.js"></script>
+<script src="app/angular/services/tipoPersonalService.js"></script>
+<script src="app/angular/services/tipoRelacionService.js"></script>
+<script src="app/angular/services/tipoSituacionService.js"></script>
+<script src="app/angular/services/tipoSituacionRevistaService.js"></script>
+<!-- Controllers -->
+<script src="app/angular/controllers/controllers.js"></script>
+<script src="app/angular/controllers/tipoAdministracionCtrl.js"></script>
+<script src="app/angular/controllers/tipoCargoCtrl.js"></script>
+<script src="app/angular/controllers/tipoContactoCtrl.js"></script>
+<script src="app/angular/controllers/tipoDocumentoCtrl.js"></script>
+<script src="app/angular/controllers/tipoEstadoContractualCtrl.js"></script>
+<script src="app/angular/controllers/tipoEstadoFormacionCtrl.js"></script>
+<script src="app/angular/controllers/tipoFormacionCtrl.js"></script>
+<script src="app/angular/controllers/tipoMotivoCtrl.js"></script>
+<script src="app/angular/controllers/tipoPersonalCtrl.js"></script>
+<script src="app/angular/controllers/tipoRelacionCtrl.js"></script>
+<script src="app/angular/controllers/tipoSituacionCtrl.js"></script>
+<script src="app/angular/controllers/tipoSituacionRevistaCtrl.js"></script>
+<!-- Main App -->
 <script src="app/angular/app.js"></script>
 
 </html>
