--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,6 +18,7 @@
 			<div id="sidebar-wrapper">
 				<ul class="sidebar-nav">
 					<li class="sidebar-brand"><a href="#">Menu <span class="glyphicon glyphicon-home"></span></a></li>
+					<li><a href="#/provincias">Provincias</a></li>
 					<li><a href="#/tiposAdministracion">Tipos de Administración</a></li>
 					<li><a href="#/tiposCargo">Tipos de Cargos</a></li>
 					<li><a href="#/tiposContacto">Tipos de Contacto</a></li>
@@ -52,6 +53,7 @@
 <!-- Services -->
 <script src="app/angular/services/services.js"></script>
 <script src="app/angular/services/server.js"></script>
+<script src="app/angular/services/provinciaService.js"></script>
 <script src="app/angular/services/tipoAdministracionService.js"></script>
 <script src="app/angular/services/tipoCargoService.js"></script>
 <script src="app/angular/services/tipoContactoService.js"></script>
@@ -66,6 +68,7 @@
 <script src="app/angular/services/tipoSituacionRevistaService.js"></script>
 <!-- Controllers -->
 <script src="app/angular/controllers/controllers.js"></script>
+<script src="app/angular/controllers/provinciaCtrl.js"></script>
 <script src="app/angular/controllers/tipoAdministracionCtrl.js"></script>
 <script src="app/angular/controllers/tipoCargoCtrl.js"></script>
 <script src="app/angular/controllers/tipoContactoCtrl.js"></script>
