--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,6 +18,7 @@
 			<div id="sidebar-wrapper">
 				<ul class="sidebar-nav">
 					<li class="sidebar-brand"><a href="#">Menu <span class="glyphicon glyphicon-home"></span></a></li>
+					<li><a href="#/partidos">Partidos</a></li>
 					<li><a href="#/provincias">Provincias</a></li>
 					<li><a href="#/tiposAdministracion">Tipos de Administración</a></li>
 					<li><a href="#/tiposCargo">Tipos de Cargos</a></li>
@@ -53,6 +54,7 @@
 <!-- Services -->
 <script src="app/angular/services/services.js"></script>
 <script src="app/angular/services/server.js"></script>
+<script src="app/angular/services/partidoService.js"></script>
 <script src="app/angular/services/provinciaService.js"></script>
 <script src="app/angular/services/tipoAdministracionService.js"></script>
 <script src="app/angular/services/tipoCargoService.js"></script>
@@ -68,6 +70,7 @@
 <script src="app/angular/services/tipoSituacionRevistaService.js"></script>
 <!-- Controllers -->
 <script src="app/angular/controllers/controllers.js"></script>
+<script src="app/angular/controllers/partidoCtrl.js"></script>
 <script src="app/angular/controllers/provinciaCtrl.js"></script>
 <script src="app/angular/controllers/tipoAdministracionCtrl.js"></script>
 <script src="app/angular/controllers/tipoCargoCtrl.js"></script>
