- funcion limpiar() para cada formulario de cada vista - boton guardar:primary, boton limpiar:default - se excluye del mapeo gson, para la clase partido, la propiedad localidades

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,6 +18,7 @@
 			<div id="sidebar-wrapper">
 				<ul class="sidebar-nav">
 					<li class="sidebar-brand"><a href="#">Menu <span class="glyphicon glyphicon-home"></span></a></li>
+					<li><a href="#/localidades">Localidades</a></li>
 					<li><a href="#/partidos">Partidos</a></li>
 					<li><a href="#/provincias">Provincias</a></li>
 					<li><a href="#/tiposAdministracion">Tipos de Administración</a></li>
@@ -54,6 +55,7 @@
 <!-- Services -->
 <script src="app/angular/services/services.js"></script>
 <script src="app/angular/services/server.js"></script>
+<script src="app/angular/services/localidadService.js"></script>
 <script src="app/angular/services/partidoService.js"></script>
 <script src="app/angular/services/provinciaService.js"></script>
 <script src="app/angular/services/tipoAdministracionService.js"></script>
@@ -70,6 +72,7 @@
 <script src="app/angular/services/tipoSituacionRevistaService.js"></script>
 <!-- Controllers -->
 <script src="app/angular/controllers/controllers.js"></script>
+<script src="app/angular/controllers/localidadCtrl.js"></script>
 <script src="app/angular/controllers/partidoCtrl.js"></script>
 <script src="app/angular/controllers/provinciaCtrl.js"></script>
 <script src="app/angular/controllers/tipoAdministracionCtrl.js"></script>
