--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,59 +2,89 @@
 <html ng-app="gdpApp" lang="en">
 
 <head>
-<meta charset="utf-8">
-<title>Gestion Docente</title>
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="resources/bootstrap-3.3.1/css/bootstrap.min.css">
-<!-- Custom CSS -->
-<link rel="stylesheet" href="app/css/simple-sidebar.css">
-<!-- <link rel="stylesheet" href="app/css/sidebar.css"> -->
+	<meta charset="utf-8">
+	<title>Gestion Docente</title>
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="resources/bootstrap-3.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="resources/bootstrap-3.3.1/css/bootstrap-theme.min.css">
 </head>
 
 <body>
-	<!-- Sidebar Menu -->
-	<div class="col-sm-2">
-		<div id="wraper">
-			<div id="sidebar-wrapper">
-				<ul class="sidebar-nav">
-					<li class="sidebar-brand"><a href="#">Menu <span class="glyphicon glyphicon-home"></span></a></li>
-					<li><a href="#/localidades">Localidades</a></li>
-					<li><a href="#/partidos">Partidos</a></li>
-					<li><a href="#/provincias">Provincias</a></li>
-					<li><a href="#/tiposAdministracion">Tipos de Administración</a></li>
-					<li><a href="#/tiposCargo">Tipos de Cargos</a></li>
-					<li><a href="#/tiposContacto">Tipos de Contacto</a></li>
-					<li><a href="#/tiposDocumento">Tipos de Documento</a></li>
-					<li><a href="#/tiposEstadoContractual">Tipos de Estado Contractual</a></li>
-					<li><a href="#/tiposEstadoFormacion">Tipos de Estado Formacion</a></li>
-					<li><a href="#/tiposFormacion">Tipos de Formacion</a></li>
-					<li><a href="#/tiposMotivo">Tipos de Motivos Baja</a></li>
-					<li><a href="#/tiposPersonal">Tipos de Personal</a></li>
-					<li><a href="#/tiposRelacion">Tipos de Relacion Laboral</a></li>
-					<li><a href="#/tiposSituacion">Tipos de Situacion Actual</a></li>
-					<li><a href="#/tiposSituacionRevista">Tipos de Situacion de Revista</a></li>
-				</ul>
-			</div>
+	<div class="container-fluid">
+		<!-- Menu -->
+		<div class="row">
+			<nav class="navbar navbar-default" role="navigation">
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed"
+							data-toggle="collapse"
+							data-target="#bs-example-navbar-collapse-1">
+							<span class="sr-only">Toggle navigation</span> 
+							<span class="icon-bar"></span> 
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="#">Gestion Docente</a>
+					</div>
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+						<ul class="nav navbar-nav">
+							<li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ubicaciones<span class="caret"></span></a>
+								<ul class="dropdown-menu" role="menu">
+									<li><a href="#/sedes">Sedes</a></li>
+									<li class="divider"></li>
+									<li><a href="#/localidades">Localidades</a></li>
+									<li><a href="#/partidos">Partidos</a></li>
+									<li><a href="#/provincias">Provincias</a></li>
+								</ul>
+							</li>
+							<li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Tipos<span class="caret"></span></a>
+								<ul class="dropdown-menu" role="menu">
+									<li><a href="#/tiposAdministracion">Tipos de Administración</a></li>
+									<li><a href="#/tiposCargo">Tipos de Cargos</a></li>
+									<li><a href="#/tiposContacto">Tipos de Contacto</a></li>
+									<li><a href="#/tiposDocumento">Tipos de Documento</a></li>
+									<li><a href="#/tiposEstadoContractual">Tipos de Estado Contractual</a></li>
+									<li><a href="#/tiposEstadoFormacion">Tipos de Estado Formacion</a></li>
+									<li><a href="#/tiposFormacion">Tipos de Formacion</a></li>
+									<li><a href="#/tiposMotivo">Tipos de Motivos Baja</a></li>
+									<li><a href="#/tiposPersonal">Tipos de Personal</a></li>
+									<li><a href="#/tiposRelacion">Tipos de Relacion Laboral</a></li>
+									<li><a href="#/tiposSituacion">Tipos de Situacion Actual</a></li>
+									<li><a href="#/tiposSituacionRevista">Tipos de Situacion de Revista</a></li>
+								</ul>
+							</li>
+						</ul>
+						<ul class="nav navbar-nav navbar-right">
+						</ul>
+					</div>
+				</div>
+			</nav>
 		</div>
-	</div>
-	<!-- View -->
-	<div class="container-fluid col-sm-8 col-sm-offset-1">
-		<div ng-view></div>
+		<!-- View -->
+		<div class="container-fluid col-sm-8 col-sm-offset-1">
+			<div ng-view></div>
+		</div>
+		<!-- Footer -->
+		<div class="row"></div>
 	</div>
 </body>
 
 <!-- JQuery -->
 <script src="resources/jquery-1.11.1/jquery-1.11.1.min.js"></script>
 <!-- Angular -->
-<script src="resources/angular-1.2.27/angular.min.js" type="text/javascript"></script>
-<script src="resources/angular-1.2.27/angular-route.min.js" type="text/javascript"></script>
+<script src="resources/angular-1.2.27/angular.min.js"
+	type="text/javascript"></script>
+<script src="resources/angular-1.2.27/angular-route.min.js"
+	type="text/javascript"></script>
 <!-- Bootstrap -->
 <script src="resources/bootstrap-3.3.1/js/bootstrap.min.js"></script>
 <!-- Custom App -->
 <script src="app/angular/routes/routes.js"></script>
+<!-- Directives -->
 <!-- Services -->
 <script src="app/angular/services/services.js"></script>
 <script src="app/angular/services/server.js"></script>
+<script src="app/angular/services/sedeService.js"></script>
 <script src="app/angular/services/localidadService.js"></script>
 <script src="app/angular/services/partidoService.js"></script>
 <script src="app/angular/services/provinciaService.js"></script>
@@ -72,6 +102,7 @@
 <script src="app/angular/services/tipoSituacionRevistaService.js"></script>
 <!-- Controllers -->
 <script src="app/angular/controllers/controllers.js"></script>
+<script src="app/angular/controllers/sedeCtrl.js"></script>
 <script src="app/angular/controllers/localidadCtrl.js"></script>
 <script src="app/angular/controllers/partidoCtrl.js"></script>
 <script src="app/angular/controllers/provinciaCtrl.js"></script>
