--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -28,10 +28,14 @@
 					</div>
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
-							<li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Ubicaciones<span class="caret"></span></a>
+							<li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Instituciones<span class="caret"></span></a>
 								<ul class="dropdown-menu" role="menu">
+									<li><a href="#/carreras">Carreras</a></li>
 									<li><a href="#/sedes">Sedes</a></li>
-									<li class="divider"></li>
+								</ul>
+							</li>
+							<li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Localizacion<span class="caret"></span></a>
+								<ul class="dropdown-menu" role="menu">
 									<li><a href="#/localidades">Localidades</a></li>
 									<li><a href="#/partidos">Partidos</a></li>
 									<li><a href="#/provincias">Provincias</a></li>
@@ -61,7 +65,7 @@
 			</nav>
 		</div>
 		<!-- View -->
-		<div class="container-fluid col-sm-8 col-sm-offset-1">
+		<div class="container-fluid col-sm-offset-1">
 			<div ng-view></div>
 		</div>
 		<!-- Footer -->
@@ -72,10 +76,8 @@
 <!-- JQuery -->
 <script src="resources/jquery-1.11.1/jquery-1.11.1.min.js"></script>
 <!-- Angular -->
-<script src="resources/angular-1.2.27/angular.min.js"
-	type="text/javascript"></script>
-<script src="resources/angular-1.2.27/angular-route.min.js"
-	type="text/javascript"></script>
+<script src="resources/angular-1.2.27/angular.min.js" type="text/javascript"></script>
+<script src="resources/angular-1.2.27/angular-route.min.js" type="text/javascript"></script>
 <!-- Bootstrap -->
 <script src="resources/bootstrap-3.3.1/js/bootstrap.min.js"></script>
 <!-- Custom App -->
@@ -84,6 +86,7 @@
 <!-- Services -->
 <script src="app/angular/services/services.js"></script>
 <script src="app/angular/services/server.js"></script>
+<script src="app/angular/services/carreraService.js"></script>
 <script src="app/angular/services/sedeService.js"></script>
 <script src="app/angular/services/localidadService.js"></script>
 <script src="app/angular/services/partidoService.js"></script>
@@ -102,6 +105,7 @@
 <script src="app/angular/services/tipoSituacionRevistaService.js"></script>
 <!-- Controllers -->
 <script src="app/angular/controllers/controllers.js"></script>
+<script src="app/angular/controllers/carreraCtrl.js"></script>
 <script src="app/angular/controllers/sedeCtrl.js"></script>
 <script src="app/angular/controllers/localidadCtrl.js"></script>
 <script src="app/angular/controllers/partidoCtrl.js"></script>
