- cambio formGenerico por formTipos, ya que solo aplica a tipos - instituto FUNCIONANDO - se agrego al modulo de sedes el instituto al que referencia

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -31,6 +31,7 @@
 							<li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Instituciones<span class="caret"></span></a>
 								<ul class="dropdown-menu" role="menu">
 									<li><a href="#/carreras">Carreras</a></li>
+									<li><a href="#/institutos">Institutos</a></li>
 									<li><a href="#/sedes">Sedes</a></li>
 								</ul>
 							</li>
@@ -65,7 +66,7 @@
 			</nav>
 		</div>
 		<!-- View -->
-		<div class="container-fluid col-sm-offset-1">
+		<div class="container-fluid">
 			<div ng-view></div>
 		</div>
 		<!-- Footer -->
@@ -86,6 +87,7 @@
 <!-- Services -->
 <script src="app/angular/services/services.js"></script>
 <script src="app/angular/services/server.js"></script>
+<script src="app/angular/services/institutoService.js"></script>
 <script src="app/angular/services/carreraService.js"></script>
 <script src="app/angular/services/sedeService.js"></script>
 <script src="app/angular/services/localidadService.js"></script>
@@ -105,6 +107,7 @@
 <script src="app/angular/services/tipoSituacionRevistaService.js"></script>
 <!-- Controllers -->
 <script src="app/angular/controllers/controllers.js"></script>
+<script src="app/angular/controllers/institutoCtrl.js"></script>
 <script src="app/angular/controllers/carreraCtrl.js"></script>
 <script src="app/angular/controllers/sedeCtrl.js"></script>
 <script src="app/angular/controllers/localidadCtrl.js"></script>
