--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -52,6 +52,7 @@
 <script src="app/angular/services/services.js" type="text/javascript"></script>
 <!-- All Services -->
 <script src="app/angular/services/server.js" type="text/javascript"></script>
+<script src="app/angular/services/desempenioService.js" type="text/javascript"></script>
 <script src="app/angular/services/docenteService.js" type="text/javascript"></script>
 <script src="app/angular/services/domicilioService.js" type="text/javascript"></script>
 <script src="app/angular/services/contactoService.js" type="text/javascript"></script>
@@ -78,6 +79,7 @@
 <!-- Controllers -->
 <script src="app/angular/controllers/controllers.js" type="text/javascript"></script>
 <!-- All Controllers -->
+<script src="app/angular/controllers/desempenioCtrl.js" type="text/javascript"></script>
 <script src="app/angular/controllers/docenteCtrl.js" type="text/javascript"></script>
 <script src="app/angular/controllers/contactoCtrl.js" type="text/javascript"></script>
 <script src="app/angular/controllers/personaCtrl.js" type="text/javascript"></script>
