--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -13,6 +13,7 @@
 <!-- 	<link rel="stylesheet" href="resources/bootstrap-3.3.1/themes/cyborg/bootstrap.min.css"> -->
 <!-- 	<link rel="stylesheet" href="resources/bootstrap-3.3.1/css/bootstrap-glyphicons.css"> -->
 	<link rel="stylesheet" href="resources/bootstrap-3.3.1/css/custom.css">
+	<link rel="stylesheet" href="app/css/login.css">
 	<link rel="stylesheet" href="resources/bootstrap-3.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="resources/bootstrap-3.3.1/css/bootstrap-theme.min.css">
 </head>
@@ -32,6 +33,7 @@
 
 <!-- Angular -->
 <script src="resources/angular-1.2.27/angular.min.js" type="text/javascript"></script>
+<script src="resources/angular-1.2.27/angular-cookies.min.js" type="text/javascript"></script>
 <script src="resources/angular-1.2.27/angular-route.min.js" type="text/javascript"></script>
 <!-- JQuery -->
 <script src="resources/jquery-1.11.1/jquery-1.11.1.min.js" type="text/javascript"></script>
@@ -61,6 +63,7 @@
 <script src="app/angular/services/institutoService.js" type="text/javascript"></script>
 <script src="app/angular/services/carreraService.js" type="text/javascript"></script>
 <script src="app/angular/services/sedeService.js" type="text/javascript"></script>
+<script src="app/angular/services/loginService.js" type="text/javascript"></script>
 <script src="app/angular/services/localidadService.js" type="text/javascript"></script>
 <script src="app/angular/services/partidoService.js" type="text/javascript"></script>
 <script src="app/angular/services/provinciaService.js" type="text/javascript"></script>
@@ -87,6 +90,7 @@
 <script src="app/angular/controllers/institutoCtrl.js" type="text/javascript"></script>
 <script src="app/angular/controllers/carreraCtrl.js" type="text/javascript"></script>
 <script src="app/angular/controllers/sedeCtrl.js" type="text/javascript"></script>
+<script src="app/angular/controllers/loginCtrl.js" type="text/javascript"></script>
 <script src="app/angular/controllers/localidadCtrl.js" type="text/javascript"></script>
 <script src="app/angular/controllers/partidoCtrl.js" type="text/javascript"></script>
 <script src="app/angular/controllers/provinciaCtrl.js" type="text/javascript"></script>
