--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>MSEG - ERP</title>
+	<title>GeDo</title>
 	<link rel="stylesheet" href="resources/bootstrap-3.3.1/css/custom.css">
 	<link rel="stylesheet" href="app/css/login.css">
 	<link rel="stylesheet" href="resources/bootstrap-3.3.1/css/bootstrap.min.css">
