- referencia en docentes - directiva : elemento para referencias y filtros docente - routes : para busquedas - asignaturas : se borra input comentado para nombre - docentes.html : se agrega el div para las referencias - menu.html : se agrega el menu de busquedas - usuarios : se cambia el icono de administrador tal como se usa en otras vistas - index.html : se agrega el ctrl de la busqueda - ctrl : busqueda - vista : busqueda - partial : referencias, filtroDocentes

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -76,6 +76,7 @@
 <script src="app/angular/controllers/controllers.js" type="text/javascript"></script>
 <!-- All Controllers -->
 <script src="app/angular/controllers/asignaturaCtrl.js" type="text/javascript"></script>
+<script src="app/angular/controllers/busquedaCtrl.js" type="text/javascript"></script>
 <script src="app/angular/controllers/carreraCtrl.js" type="text/javascript"></script>
 <script src="app/angular/controllers/contactoCtrl.js" type="text/javascript"></script>
 <script src="app/angular/controllers/desempenioCtrl.js" type="text/javascript"></script>
