- include de spin.js en index.html - libreria spin.js

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,6 +27,8 @@
 <script src="resources/angular-1.2.27/angular.min.js" type="text/javascript"></script>
 <script src="resources/angular-1.2.27/angular-cookies.min.js" type="text/javascript"></script>
 <script src="resources/angular-1.2.27/angular-route.min.js" type="text/javascript"></script>
+<!-- Spin -->
+<script src="resources/spin.min.js" type="text/javascript"></script>
 <!-- JQuery -->
 <script src="resources/jquery-1.11.1/jquery-1.11.1.min.js" type="text/javascript"></script>
 <!-- Bootstrap -->
